--- a/src/main/asciidoc/_chapters/upgrading.adoc
+++ b/src/main/asciidoc/_chapters/upgrading.adoc
@@ -377,10 +377,14 @@ And there is a more safer way if you are running 2.1.1+ or 2.0.3+ cluster. It ne
 
 . Shutdown both active and standby Masters (Your cluster will continue to server reads and writes without interruption).
 . Set the property hbase.procedure.upgrade-to-2-2 to true in hbase-site.xml for the Master, and start only one Master, still using the 2.1.1+ (or 2.0.3+) version.
-. Wait until the Master quits. Confirm that there is a 'READY TO ROLLING UPGRADE' message in the Master log as the cause of the shutdown. The Procedure Store is now empty.
+. Wait until the Master quits. Confirm that there is a 'UPGRADE OK: All existed procedures have been finished, quit...' message in the Master log as the cause of the shutdown. The Procedure Store is now empty.
 . Start new Masters with the new 2.2+ version.
 
 Then you can rolling upgrade RegionServers one by one. See link:https://issues.apache.org/jira/browse/HBASE-21075[HBASE-21075] for more details.
+
+In case these steps are not done, on starting 2.2+ master, you would see the following exception in the master logs:
+
+`org.apache.hadoop.hbase.HBaseIOException: Unsupported procedure type class org.apache.hadoop.hbase.master.assignment.UnassignProcedure found`
 
 [[upgrade2.0]]
 === Upgrading from 1.x to 2.x
